CORE-23988: Fixing spacing in the header link.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-global/component/_aura-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-global/component/_aura-header.scss
@@ -36,6 +36,7 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
+      line-height: 1;
 
       svg {
         max-width: 3.6875rem;
